--- a/projeto/index.html
+++ b/projeto/index.html
@@ -68,9 +68,8 @@
 			</form>
 		</section>
 	</main>
-	<script src="percorre.js"></script>
+	<script src="precorre.js"></script>
 	<script src="calcula-imc.js"></script>
-	<script src="imprime-nome.js"></script>
 	<script src="muda-de-cor.js"></script>
 	<script src="adiciona.js"></script>
 </body>
